@@ -4,6 +4,7 @@
 
 Version 1.4.11 - SVN
 --------------------
+  - Fix broken set_url_var function in functions/html.php (#1729814).
   - Fix config.pl not detecting auth support correctly (#1727033).
   - Fix display of X-Priority in message view.
   - Work around mailers sending broken Date headers with no space after the
